# Dj-selector-app

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  windows-release.yml
analysis/: analyzer.py
api/: controller.py  events.py
controls/: keyboard.py  midi.py
docs/: ARCHITECTURE.md  NEXT_UI.md  RELEASE_WINDOWS.md
engine/: deck.py  mixer.py
installer/windows/: DJSelector.iss
scripts/: build-windows-package.ps1  dev-setup-windows.bat  dev-setup-windows.ps1
tests/: test_analysis_fallback.py  test_api_search.py  test_library_db.py  test_scanner.py
ui/: app.py
