[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-selector-app"
version = "0.1.0"
description = "Engine-first DJ mixing MVP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "sounddevice>=0.4",
  "soundfile>=0.12",
  "librosa>=0.10",
  "mutagen>=1.47",
  "mido>=1.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
